[project]
name = "script-grader"
version = "0.1.0"
description = "Dash app to assist with grading and reviewing Python exercise submissions"
authors = [
  { name="Kilian Erhard" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "dash>=2.0.0",
  "dash-mantine-components>=0.12.1",
  "matplotlib>=3.0",
]

[project.scripts]
cbp-uebungen = "app.app:main"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["*.py"]